Fixed dark mode toggle button padding

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -25,8 +25,7 @@ mat-toolbar {
       }
 
       #toggle-btn {
-        margin-bottom: 8px;
-        padding: 0 36px;
+        margin: 0 36px 8px 36px;
       }
 
       .mat-tab-group {
